--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,13 +1,42 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body {background-color: #f6cabc;}
+
+.title {
+  background-color:  #f6cabc;
+  margin-bottom: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ h1 {
+   font-size: 5vw;
+   display: block;
+   background-color:#f6cabc;
+   padding: 5px;
+   text-align: center;
+  
 }
+
+h3 {
+  text-align: center;
+  padding-bottom: 1em;
+}
+
+.card {
+  border-bottom: 2em solid #f6cabc ;
+}
+
+.aboutMe {
+font-size: 1.5em;
+padding: 3%;
+}
+
+  @media only screen and (max-width: 660px) {
+.aboutMe {
+  padding-left: 15%;
+  padding-right: 15%;
+}}
+
+@media only screen and (max-width: 482px) {
+.aboutMe {
+padding-left: 20%;
+padding-right: 20%;
+
+}}
