--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -50,6 +50,12 @@ padding-right: 20%;
   margin-bottom: 5%;
 }
 
+.Headshot {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+ 
 
 
