added margin to text on home page

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -57,7 +57,9 @@ padding-right: 20%;
 }
 
 .homepage {
-  margin-bottom: 15%;
+  margin-bottom: 20%;
+  margin-right: 10%;
+  margin-left: 10%;
 }
 
  
