--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -6,8 +6,16 @@ body {background-color: #f6cabc;}
 }
 
 .card {
-  height: 50%;
-  width: 50%
+  width: 80%;
+  display: flex; justify-content: center;
+  border-bottom: 2em solid #f6cabc;
+  border-color: red;
+  border-width: 2px;
+}
+
+.img-container {
+  border-color: blue;
+  border-width: 2px;
 }
 
  h1 {
@@ -22,10 +30,6 @@ body {background-color: #f6cabc;}
 h3 {
   text-align: center;
   padding-bottom: 1em;
-}
-
-.card {
-  border-bottom: 2em solid #f6cabc ;
 }
 
 .aboutMe {
