--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -6,17 +6,12 @@ body {background-color: #f6cabc;}
 }
 
 .card {
-  width: 80%;
-  display: flex; justify-content: center;
+  height: 40%;
   border-bottom: 2em solid #f6cabc;
   border-color: red;
   border-width: 2px;
 }
 
-.img-container {
-  border-color: blue;
-  border-width: 2px;
-}
 
  h1 {
    font-size: 5vw;
