--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -7,11 +7,15 @@ body {background-color: #f6cabc;}
 
 .card {
   height: 40%;
-  border-bottom: 2em solid #f6cabc;
   border-color: red;
   border-width: 2px;
 }
 
+.content {
+  text-align: center;
+  padding: 10px; 
+  padding-right: 15px;
+}
 
  h1 {
    font-size: 5vw;
