--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -13,8 +13,10 @@ body {background-color: #f6cabc;}
 
 .content {
   text-align: center;
-  padding: 10px; 
-  padding-right: 15px;
+  padding-top: 10px; 
+  padding-right: 20px;
+  padding-left: 10px;
+  padding-bottom: 15px;
 }
 
  h1 {
