--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -6,7 +6,11 @@ body {background-color: #f6cabc;}
 }
 
 .card {
-  height: 40%;
+  width: 70%;
+  height: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-color: red;
   border-width: 2px;
 }
