--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -14,6 +14,12 @@ body {background-color: #f6cabc;}
   border-color: red;
   border-width: 2px;
 }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 
 .content {
   text-align: center;
