--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -11,15 +11,15 @@ body {background-color: #f6cabc;}
   display: flex;
   align-items: center;
   justify-content: center;
-  border-color: red;
-  border-width: 2px;
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px 8px #813c3c;
 }
 .container {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 
 .content {
   text-align: center;
@@ -46,7 +46,7 @@ h3 {
 
 .aboutMe {
 font-size: 1.2em;
-padding: 3%;
+padding: 5%;
 }
 
   @media only screen and (max-width: 660px) {
