--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -52,7 +52,10 @@ h3 {
 
 .aboutMe {
 font-size: 1.2em;
-padding: 5%;
+padding-top: 2%;
+padding-bottom: 5%;
+padding-left: 5%;
+padding-right: 5%;
 }
 
   @media only screen and (max-width: 660px) {
